Fix path issues in windows with toUri() method